# dprint-clang-format

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  dprint.jsonc  hk.pkl  mise.toml  pixi.toml  schema.json  worklog.md
.github/actions/setup-ci-deps/: action.yml
.github/workflows/: ci.yml  release.yml
.mise/tasks/: bench  build  configure  test
cmake/: llvm-libformat-wasm-cache.cmake  llvm-wasm-cache.cmake  wasm32-unknown-unknown-toolchain.cmake  wasm32-unknown-unknown.cmake
cmake/toolchains/: wasm32-unknown-unknown.cmake
docs/: release-plan.md
reports/: dprint-plugin-imports.md  probe-imports.md  stl-probe-imports.md
scripts/: apply_llvm_patches.sh  build_dprint_plugin.sh  build_libformat_probe.sh  build_probe.sh  build_stl_probe.sh  build_wasm_cxx_shim.sh  check_tools.sh  configure_llvm_wasm.sh  fetch_llvm.sh  fetch_wasm_cxx_shim.sh  link_libformat_wasm.sh  report_wasm_imports.sh  smoke_dprint_plugin.sh  smoke_freestanding.sh  test_plugin.sh  wasm_cxx_shim_objects.sh
src/: dprint_plugin.cpp  libformat_probe.cpp  probe_freestanding.cpp  stl_probe.cpp  wasm_allocator.c  wasm_posix_stubs.cpp  wasm_runtime_core.cpp  wasm_support.cpp
support/: SUPPORT_AUDIT.md
support/libcxx-wasm/include/: __assertion_handler  __config_site  chrono  condition_variable  cwchar  future  iomanip  locale  mutex  ostream  random  shared_mutex  sstream  thread
support/patches/: dprint-wasm-fixed-date-time.patch  dprint-wasm-limit-format-pp-branches.patch  dprint-wasm-no-real-fs.patch  dprint-wasm-skip-frontend-openmp.patch  dprint-wasm-trim-crash-signals.patch  dprint-wasm-trim-env-path.patch  dprint-wasm-trim-fs-deps.patch  dprint-wasm-trim-path-fs.patch  dprint-wasm-trim-path-posix-inc.patch  dprint-wasm-trim-path-posix.patch  dprint-wasm-trim-process-chrono.patch  dprint-wasm-trim-support-deps.patch
support/wasm-sysroot/include/: assert.h  ctype.h  dirent.h  dlfcn.h  errno.h  fcntl.h  inttypes.h  limits.h  math.h  poll.h  pwd.h  sched.h  setjmp.h  signal.h  stdio.h  stdlib.h  string.h  sysexits.h  time.h  unistd.h  wchar.h
support/wasm-sysroot/include/machine/: endian.h
support/wasm-sysroot/include/sys/: mman.h  resource.h  socket.h  stat.h  statvfs.h  time.h  types.h  un.h  utsname.h  wait.h
tests/: dprint_cli_test.sh  plugin.bats  plugin_abi_test.js
